--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: "Gary"
 date: 2022-01-18
 ---
-title: Gary's home
+title: Gary's 
 author: Gary
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
